tests/test3.out
id, |id1|
id, |id2|
string, |"string1"|
string, |"string \" string"|
id, |id56$__67|
istring_start, |$"istring$(|
istring_cont, |)$djfkl$(|
istring_end, |)$dfjlk"|
number, |123|
number, |123.34#123E+65|
+, |+|
-, |-|
operator, |+-|
(, |(|
), |)|
reserved, |(:|
reserved, |:)|
reserved, |[|
reserved, |]|
reserved, |[:|
reserved, |:]|
reserved, |[#|
id, |#]|
{, |{|
}, |}|
reserved, |{:|
reserved, |:}|
reserved, |{#|
id, |#}|

Error line 5:
(# #####) (#
          ^^
Comment started by (# may not span several lines

Error line 6:
(# #
^~~^
Comment started by (# may not span several lines

Error line 7:
"Unterminated string  ))) 	
^~~~~~~~~~~~~~~~~~~^
Invalid string
error, |"Unterminated string|
), |)|
), |)|
), |)|

Error line 8:
 A"XX" "XX"A 0ABC#16 0AB.DFE#16E+14
 ^~~~^
Invalid string
error, |A"XX"|

Error line 8:
 A"XX" "XX"A 0ABC#16 0AB.DFE#16E+14
       ^~~~^
Invalid string
error, |"XX"A|
number, |0ABC#16|
number, |0AB.DFE#16E+14|
id, |ABC|

Error line 9:
ABC#16
   ^~^
Comment must be preceded by white space
istring, |$"String"|
istring_start, |$"String$(|
istring_cont, |)$string$(|
istring_end, |)$string"|

Error line 11:
$"string"A )$string"X
^~~~~~~~~^
Invalid string
error, |$"string"A|

Error line 11:
$"string"A )$string"X
           ^~~~~~~~~^
Invalid string
error, |)$string"X|
string, |"string with $"|

Error line 12:
"string with $" $"istring with $" $"istring with $ $( )$istring with $ $( )$ istring with $"
                ^~~~~~~~~~~~~~~~^
Invalid string
error, |$"istring with $"|

Error line 12:
"string with $" $"istring with $" $"istring with $ $( )$istring with $ $( )$ istring with $"
                                  ^~~~~~~~~~~~~~~~~~^
Invalid string
error, |$"istring with $ $(|

Error line 12:
"string with $" $"istring with $" $"istring with $ $( )$istring with $ $( )$ istring with $"
                                                      ^~~~~~~~~~~~~~~~~~^
Invalid string
error, |)$istring with $ $(|

Error line 12:
"string with $" $"istring with $" $"istring with $ $( )$istring with $ $( )$ istring with $"
                                                                          ^~~~~~~~~~~~~~~~~^
Invalid string
error, |)$ istring with $"|
string, |"$("|

Error line 14:
 12.45#ABE+5"Foo"\\ string
 ^~~~~~~~~~~~~~~^
Invalid string
error, |12.45#ABE+5"Foo"|
zstring, |\\ string|
zstring, |\\ string|
id, |a|
., |.|
id, |c|
id, |a|
., |.|
id, |c|
